<resources>
    <string name="app_name">LocalAgroMarket</string>
    <string name="app_nameLarriz">LocalAgroMarket</string>

    <!-- LoginActivity -->
    <string name="eposta">E-posta</string>
    <string name="pasahitza">Pasahitza</string>
    <string name="saioahasi">Saioa hasi</string>
    <string name="erregistratuEmen">Erregistratu emen</string>
    <string name="kontuaEz">Ez duzu kontua?</string>
    <string name="sartuEposta">Sartu zure E-posta</string>
    <string name="sartuPasahitza">Sartu zure pasahitza</string>
    <string name="pasahitzaGorde">Pasahitza gorde</string>
    <string name="loginErrorea">Datu horiek dituen konturik ez dago, saiatu berriro.</string>
    <string name="erKonexioaLogin">Ez dago Internet konexiorik. Saiatu berriro geroago</string>
    <string name="erEpostaLogin">Eposta ez da aurkitu</string>
    <string name="erPasahitzaLogin">Pasahitz okerra</string>
    <string name="erLoginLogin">E-posta edo pasahitz okerra</string>

    <!-- Erregistroa -->
    <string name="izena">Sartu zure izena</string>
    <string name="nan">Sartu zure nan-a</string>
    <string name="helbidea">Sartu zure helbidea</string>
    <string name="postakodea">Posta kodea</string>
    <string name="telefonoa">Telefonoa</string>
    <string name="probinztia">Probintzia</string>
    <string name="herria">Herria</string>
    <string name="abizenak">Sartu zure abizenak</string>
    <string name="pasahitza1">Sartu zure pasahitza</string>
    <string name="pasahitza2">Errepikatu pasahitza</string>
    <string name="erregistratu">Erregistroa bukatu</string>
    <string name="erIzena">Izena bete mesedez</string>
    <string name="erAbizenak">Lehen bi abizenak sartu mesedez</string>
    <string name="erEposta">Eposta okerra</string>
    <string name="erPasahitza1">Pasahitza bete mesedez</string>
    <string name="erPasahitza2">Pasahitzak ez dira berdinak</string>
    <string name="erOkerra">Erregistro okerra: </string>
    <string name="erNanBikoiztua">Beste erabiltzaile bat dago NAN berarekin.</string>
    <string name="erPasahitzFormatua">Pasahitzak ez dago behar bezalako formatua (gutxienez 6 karaktere)</string>
    <string name="erEpostaErregistratuta">E-posta dagoeneko erregistratua dago</string>
    <string name="erInternet">Ez dago Internet konexiorik. Saiatu berriro geroago</string>
    <string name="erEzezaguna">Errore ezezaguna: </string>
    <string name="kontuaSortu">Zure kontua sortu da</string>

    <!--Botoien nabegazioa -->
    <string name="produktuak">Produktuak</string>
    <string name="mapa">Mapa</string>
    <string name="profila">Profila</string>

    <!-- Profila Fragment -->
    <string name="profilArgazkia">Aldatu profileko argazkia</string>
    <string name="etEposta">Eposta</string>
    <string name="etIzena">Izena</string>
    <string name="etAbizenak">Abizenak</string>
    <string name="etHelbidea">Helbidea</string>
    <string name="btnAldatuPass">Aldatu Pasahitza</string>
    <string name="btnItxiSaioa">Itxi saioa</string>
    <string name="btnDelAcc">Ezabatu kontua</string>
    <string name="descriptionEditIzena">Izena editatzeko botoia</string>
    <string name="descriptionEditAbizenak">Abizenak editatzeko botoiak</string>

    <!--Erosketarekin jarraitu -->
    <string name="saskiMezua">Produktua saskian gorde da</string>
    <string name="erostenJarraitu">Erosten jarraitu</string>
    <string name="saskiraJoan">Saskira joan</string>

    <!-- Saskia -->
    <string name="saltzailea">Saltzailea:</string>


</resources>