<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ErregistroaActivity">

        <LinearLayout
            android:id="@+id/llTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/etEposta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.266">
            <ImageView
                android:id="@+id/ivHeaderImage"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/local_agro_market_logo"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

        <EditText
            android:id="@+id/etEposta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/eposta"
            android:inputType="textEmailAddress"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etAbizena"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/personxml"
            android:drawablePadding="8dp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/abizenak"
            android:inputType="textPersonName"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIzena"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etHelbidea"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/helbidea"
            android:drawablePadding="8dp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/helbidea"
            android:inputType="textPostalAddress"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasahitza1"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etPostaKodea"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="-150sp"
            android:background="@drawable/edit_text"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/postakodea"
            android:inputType="number"
            android:minHeight="48sp"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHelbidea"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etTelefonoa"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="-150sp"
            android:background="@drawable/edit_text"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/telefonoa"
            android:inputType="phone"
            android:maxLength="9"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHelbidea"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etProbintzia"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="-150sp"
            android:background="@drawable/edit_text"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/probinztia"
            android:inputType="text"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPostaKodea"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etHerria"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="-150sp"
            android:background="@drawable/edit_text"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/herria"
            android:inputType="text"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPostaKodea"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etNan"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/nan"
            android:drawablePadding="8dp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/nan"
            android:inputType="textPersonName"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEposta"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etIzena"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/personxml"
            android:drawablePadding="8dp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/izena"
            android:inputType="textPersonName"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNan"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/etPasahitza1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/key"
            android:drawablePadding="8dp"
            android:layout_marginTop="20sp"
            android:ems="10"
            android:hint="@string/pasahitza1"
            android:inputType="textPassword"
            android:minHeight="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAbizena"
            tools:ignore="Autofill,TextContrastCheck" />

        <Button
            android:id="@+id/btnErregistratu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/erregistratu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHerria" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>