<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/successConstraintLayout"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layooutDialog"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_corners"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/saskiaArgazkia"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:src="@drawable/saskia"
            app:layout_constraintBottom_toTopOf="@id/saskiMezua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saskiMezua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/saskiMezua"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/erostenJarraitu"
            app:layout_constraintTop_toBottomOf="@id/saskiaArgazkia"
            tools:ignore="NotSibling" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saskiMezua">

            <Button
                android:id="@+id/erostenJarraitu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded_corners"
                android:text="@string/erostenJarraitu"
                android:textSize="14sp" />

            <Button
                android:id="@+id/saskiraJoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded_corners"
                android:text="@string/saskiraJoan"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
